--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "kata-string-calculator-ts",
   "version": "0.0.0",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "watch": "jest --watchAll"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
